feat: Add gemstone system with rarity and school affinities
- Introduced GemstoneRarity enum to define rarity tiers with mana capacities and formatting.
- Created GemstoneSchool enum for magic school affinities related to gemstones.
- Developed GemstoneItem class to represent custom gemstone items with rarity, school, and mana properties.
- Registered 21 unique gemstone items with conflict-free names to avoid clashes with vanilla items.
- Implemented custom creative item group for gemstones in the Mana and Magic mod.
- Added loot tables for gemstone drops with weighted probabilities.
- Created block models and textures for new gemstone-related blocks.
- Updated localization files for gemstone item names and item group.